# SFML-Physics

./: CMakeLists.txt  README.md
include/: game.hpp  physics.hpp  random.hpp  renderer.hpp  star.hpp  vector.hpp
src/: main.cpp
